Fix Association Activité Randonnée
